--- a/programming.html
+++ b/programming.html
@@ -26,7 +26,6 @@ ul.update {
 .end
 {
     padding-right: 100px;
-
 }
 .textcol
 {
@@ -44,12 +43,12 @@ ul.update {
     /* navbar */
     .nav1
     {
-        font-size: 200%;
+        font-size: 220%;
     } 
     /* pic and text */
 .heading
 {
-    font-size: 40px;
+    font-size: 50px;
 }
 .updatetime {
     font-size: 30px;
@@ -61,7 +60,7 @@ ul.update {
   } 
   .text
   {
-    font-size: 50px;
+    font-size: 35px;
     font-weight: 100;
   }
 .imageprog
@@ -76,13 +75,13 @@ ul.update {
     /* navbar */
     .nav1
     {
-        font-size: 250%;
+        font-size: 200%;
 
     } 
     /* pic and text */
 .heading
 {
-    font-size: 50px;
+    font-size: 40px;
 }
 .updatetime {
     font-size: 28px;
@@ -169,15 +168,18 @@ font-size: 15px;
     padding:4% 0 4% 0;
 
 }
+.container
+{
+    padding:0 2% 0 2%;
+}
 }
 </style>
 <body style=" background-color: black;overflow-x: hidden;width:100%;">
     <div class="page">
     <!-- navbar -->
     <div class="topnavbar">
-        <nav class="navbar navbar" style="width: 100%;">
+        <nav class="navbar navbar-inverse" style="width: 100%;">
           <ul class="nav navbar-nav left">
-              <li><a class="nav1"> </a></li>
            <li> <a href="#" class="nav1">TechSnap</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right end">
