--- a/programming.html
+++ b/programming.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Programming</title>
   <meta charset="utf-8">
   <!-- <link rel="stylesheet" href="prog.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,15 +43,15 @@ ul.update {
     /* navbar */
     .nav1
     {
-        font-size: 220%;
+        font-size: 170%;
     } 
     /* pic and text */
 .heading
 {
-    font-size: 50px;
+    font-size: 44px;
 }
 .updatetime {
-    font-size: 30px;
+    font-size: 20px;
   }
   .image
   {
@@ -60,7 +60,7 @@ ul.update {
   } 
   .text
   {
-    font-size: 35px;
+    font-size: 25px;
     font-weight: 100;
   }
 .imageprog
@@ -75,7 +75,7 @@ ul.update {
     /* navbar */
     .nav1
     {
-        font-size: 200%;
+        font-size: 160%;
 
     } 
     /* pic and text */
@@ -84,7 +84,7 @@ ul.update {
     font-size: 40px;
 }
 .updatetime {
-    font-size: 28px;
+    font-size: 18px;
   }
   .image
   {
@@ -93,7 +93,7 @@ ul.update {
   } 
   .text
   {
-    font-size: 32px;
+    font-size: 22px;
     font-weight: 100;
   }
   .imageprog
