--- a/programming.html
+++ b/programming.html
@@ -139,6 +139,10 @@ font-size: 15px;
 @media only screen and (min-device-width:320px) and (max-device-width:768px) 
 {
    /* navbar */
+   .navbar
+   {
+       width:100%;
+   }
 .nav1
 {
     font-size: 150%;
@@ -168,9 +172,9 @@ font-size: 15px;
     padding:4% 0 4% 0;
 
 }
-.container
+.spacing
 {
-    padding:0 2% 0 2%;
+    padding:0 10% 0 10%;
 }
 }
 </style>
@@ -189,7 +193,7 @@ font-size: 15px;
         </nav>
         </div>
         <!-- text -->
-        <div class="container">
+        <div class="container spacing">
             <h1 style="color: white;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" class="heading">
             Top 10 Programming Languages</h1>
             <ul class="update">
@@ -199,7 +203,7 @@ font-size: 15px;
 <img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image">
 </div>
 <!-- intro -->
-<div class="container">
+<div class="container spacing">
     <div class="row">
         <div class="text textcol col-8">Pretty much sure, almost everyone knows that in today’s 
             digitally advanced world how technology is changing at a rapid pace. It has 
