--- a/programming.html
+++ b/programming.html
@@ -99,7 +99,7 @@ ul.update {
   .imageprog
 {
     padding:4% 0 4% 0;
-    
+    width:30%
 
 }
 }
@@ -132,7 +132,6 @@ font-size: 15px;
   .imageprog
 {
     padding:4% 0 4% 0;
-
 }
 }
 
@@ -170,11 +169,11 @@ font-size: 15px;
 .imageprog
 {
     padding:4% 0 4% 0;
-
+width:30%
 }
 .spacing
 {
-    padding:0 20% 0 20%;
+    padding:0 14% 0 14%;
 }
 }
 </style>
