--- a/programming.html
+++ b/programming.html
@@ -145,7 +145,7 @@ font-size: 15px;
 .nav1
 {
     font-size: 150%;
-
+padding-left:20px ;
 } 
 /* pic and text */
 .heading
@@ -169,11 +169,12 @@ font-size: 15px;
 .imageprog
 {
     padding:4% 0 4% 0;
-width:30%
+    width:30%;
+    height:30%;
 }
 .spacing
 {
-    padding:0 14% 0 14%;
+    padding:0 10% 0 10%;
 }
 }
 </style>
