--- a/programming.html
+++ b/programming.html
@@ -145,7 +145,7 @@ font-size: 15px;
 .nav1
 {
     font-size: 150%;
-padding-left:20px ;
+padding-left:40px ;
 } 
 /* pic and text */
 .heading
@@ -166,11 +166,65 @@ font-size: 15px;
     width:80%;
     padding:2% 15% 2% 0; 
 } 
-.imageprog
+.imagejs
+{
+    padding:4% 0 4% 0;
+    width:40%;
+    height:40%;
+}
+.imagepython
 {
     padding:4% 0 4% 0;
     width:30%;
     height:30%;
+}
+.imagec
+{
+    padding:4% 0 4% 0;
+    width:30%;
+    height:30%;
+}
+.imagejava
+{
+    padding:4% 0 4% 0;
+    width:30%;
+    height:30%;
+}
+.imager
+{
+    padding:4% 0 4% 0;
+    width:50%;
+    height:50%;
+}
+.imagekotlin
+{
+    padding:4% 0 4% 0;
+    width:33%;
+    height:33%;
+}
+.imagecsharp
+{
+    padding:4% 0 4% 0;
+    width:33%;
+    height:33%;
+}
+.imagephp
+{
+    padding:4% 0 4% 0;
+    width:60%;
+    height:60%;
+}
+.imagego
+{
+    padding:4% 0 4% 0;
+    width:33%;
+    height:33%;
+}
+.imagescala
+{
+    padding:4% 0 4% 0;
+    width:27%;
+    height:27%;
 }
 .spacing
 {
@@ -219,7 +273,7 @@ font-size: 15px;
             <u>1.JavaScript</u>  </h1>
         </div>
         <div class="row">
-      <img src="js.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="js.png" class="img-responsive center-block d-block mx-auto imagejs" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
@@ -250,7 +304,7 @@ font-size: 15px;
             <u>2.Python</u>  </h1>
         </div>
         <div class="row">
-      <img src="python.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="python.png" class="img-responsive center-block d-block mx-auto imagepython" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
@@ -273,7 +327,7 @@ font-size: 15px;
             <u>3.C++</u>  </h1>
         </div>
         <div class="row">
-      <img src="c++.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="c++.png" class="img-responsive center-block d-block mx-auto imagec" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
@@ -304,7 +358,7 @@ font-size: 15px;
             <u>4.Java</u>  </h1>
         </div>
         <div class="row">
-      <img src="java.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="java.png" class="img-responsive center-block d-block mx-auto imagejava" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
@@ -338,7 +392,7 @@ font-size: 15px;
             <u>5.R Language</u>  </h1>
         </div>
         <div class="row">
-      <img src="R.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="R.png" class="img-responsive center-block d-block mx-auto imageR" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
@@ -362,7 +416,7 @@ font-size: 15px;
             <u>6.Kotlin</u>  </h1>
         </div>
         <div class="row">
-      <img src="kotlin.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="kotlin.png" class="img-responsive center-block d-block mx-auto imagekotlin" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
@@ -380,7 +434,7 @@ font-size: 15px;
             <u>7.C#</u>  </h1>
         </div>
         <div class="row">
-      <img src="Csharp.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="Csharp.png" class="img-responsive center-block d-block mx-auto imagecsharp" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
@@ -403,7 +457,7 @@ font-size: 15px;
             <u>8.PHP</u>  </h1>
         </div>
         <div class="row">
-      <img src="php.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="php.png" class="img-responsive center-block d-block mx-auto imagephp" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
@@ -422,7 +476,7 @@ font-size: 15px;
             <u>9.Go</u>  </h1>
         </div>
         <div class="row">
-      <img src="golang.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="golang.png" class="img-responsive center-block d-block mx-auto imagego" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
@@ -441,7 +495,7 @@ font-size: 15px;
             <u>10.Scala</u>  </h1>
         </div>
         <div class="row">
-      <img src="scala.png" class="img-responsive center-block d-block mx-auto imageprog" alt="Sample Image">
+      <img src="scala.png" class="img-responsive center-block d-block mx-auto imagescala" alt="Sample Image">
     </div>
     <div class="row">
         <div class="text textcol col-8">
