--- a/programming.html
+++ b/programming.html
@@ -138,6 +138,9 @@ font-size: 15px;
 @media only screen and (min-device-width:320px) and (max-device-width:768px) 
 {
    /* navbar */
+   body{
+overflow-x: hidden;
+   }
    .navbar
    {
        width:100%;
@@ -145,7 +148,7 @@ font-size: 15px;
 .nav1
 {
     font-size: 150%;
-padding-left:40px ;
+padding-left:35px ;
 } 
 /* pic and text */
 .heading
@@ -211,8 +214,8 @@ font-size: 15px;
 .imagephp
 {
     padding:4% 0 4% 0;
-    width:60%;
-    height:60%;
+    width:100%;
+    height:100%;
 }
 .imagego
 {
@@ -228,7 +231,7 @@ font-size: 15px;
 }
 .spacing
 {
-    padding:0 10% 0 10%;
+    padding:0 13% 0 13%;
 }
 }
 </style>
