--- a/programming.html
+++ b/programming.html
@@ -256,7 +256,7 @@ font-size: 15px;
               <li class="updatetime">Last Updated 25 July 2021</li>
               </ul>
             </div>
-<img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image">
+<!-- <img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image"> -->
 </div>
 <!-- intro -->
 <div class="container spacing">
