--- a/programming.html
+++ b/programming.html
@@ -138,6 +138,10 @@ font-size: 15px;
 @media only screen and (min-device-width:320px) and (max-device-width:768px) 
 {
    /* navbar */
+   .page
+   {
+       overflow-x: hidden;
+   }
    body{
 overflow-x: hidden;
    }
