--- a/programming.html
+++ b/programming.html
@@ -256,19 +256,6 @@ font-size: 15px;
             <ul class="update">
               <li class="updatetime">Last Updated 25 July 2021</li>
               </ul>
-            </div>
-<img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image">
-</div>
-<!-- intro -->
-<div class="container spacing">
-    <div class="row">
-        <div class="text textcol col-8">Pretty much sure, almost everyone knows that in today’s 
-            digitally advanced world how technology is changing at a rapid pace. It has 
-            become quite normal to watch alternative technologies surpassing each other
-             frequently with regular updates & advancements. Amidst all this, there comes 
-             a domain that gets affected a lot with such a volatile nature of the tech world 
-             –<i> and that is Programming Language!</i></div>
-    </div>
-    </div>
+      </div></div>
     </body>
     </html>
