--- a/programming.html
+++ b/programming.html
@@ -250,12 +250,6 @@ font-size: 15px;
         </nav>
         </div>
         <!-- text -->
-        <div class="container spacing">
-            <h1 style="color: white;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" class="heading">
-            Top 10 Programming Languages</h1>
-            <ul class="update">
-              <li class="updatetime">Last Updated 25 July 2021</li>
-              </ul>
-      </div></div>
+       </div>
     </body>
     </html>
