--- a/programming.html
+++ b/programming.html
@@ -235,9 +235,9 @@ font-size: 15px;
 }
 }
 </style>
-<body style=" background-color: black;overflow-x: hidden;width:100%;">
+<body style=" background-color: black;overflow-x: hidden;max-width:100%;">
     <!-- navbar -->
-    <div class="topnavbar">
+    <!-- <div class="topnavbar">
         <nav class="navbar navbar-inverse" style="width: 100%;">
           <ul class="nav navbar-nav left">
            <li> <a href="#" class="nav1">TechSnap</a></li>
@@ -247,19 +247,19 @@ font-size: 15px;
             <li><a href="#" class="nav1">Contact</a></li>
           </ul>
         </nav>
-        </div>
+        </div> -->
         <!-- text -->
-        <div class="container spacing">
+        <!-- <div class="container spacing">
             <h1 style="color: white;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" class="heading">
             Top 10 Programming Languages</h1>
             <ul class="update">
               <li class="updatetime">Last Updated 25 July 2021</li>
               </ul>
             </div>
-<img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image">
+<img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image"> -->
 
 <!-- intro -->
-<div class="container spacing">
+<!-- <div class="container spacing">
     <div class="row">
         <div class="text textcol col-8">Pretty much sure, almost everyone knows that in today’s 
             digitally advanced world how technology is changing at a rapid pace. It has 
@@ -267,7 +267,7 @@ font-size: 15px;
              frequently with regular updates & advancements. Amidst all this, there comes 
              a domain that gets affected a lot with such a volatile nature of the tech world 
              –<i> and that is Programming Language!</i></div>
-    </div>
+    </div> -->
     <!-- JavaScript -->
     <div class="row heading">
         <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" class="heading textcol">
