--- a/programming.html
+++ b/programming.html
@@ -259,7 +259,7 @@ font-size: 15px;
 <img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image"> -->
 
 <!-- intro -->
-<!-- <div class="container spacing">
+<div class="container spacing">
     <div class="row">
         <div class="text textcol col-8">Pretty much sure, almost everyone knows that in today’s 
             digitally advanced world how technology is changing at a rapid pace. It has 
@@ -267,7 +267,7 @@ font-size: 15px;
              frequently with regular updates & advancements. Amidst all this, there comes 
              a domain that gets affected a lot with such a volatile nature of the tech world 
              –<i> and that is Programming Language!</i></div>
-    </div> -->
+    </div>
     <!-- JavaScript -->
     <div class="row heading">
         <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" class="heading textcol">
