--- a/programming.html
+++ b/programming.html
@@ -249,14 +249,14 @@ font-size: 15px;
         </nav>
         </div> -->
         <!-- text -->
-        <!-- <div class="container spacing">
+        <div class="container spacing">
             <h1 style="color: white;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" class="heading">
             Top 10 Programming Languages</h1>
             <ul class="update">
               <li class="updatetime">Last Updated 25 July 2021</li>
               </ul>
             </div>
-<img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image"> -->
+<img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image">
 
 <!-- intro -->
 <div class="container spacing">
