--- a/programming.html
+++ b/programming.html
@@ -237,7 +237,7 @@ font-size: 15px;
 </style>
 <body style=" background-color: black;overflow-x: hidden;max-width:100%;">
     <!-- navbar -->
-    <!-- <div class="topnavbar">
+    <div class="topnavbar" style="overflow-x: hidden;">
         <nav class="navbar navbar-inverse" style="width: 100%;">
           <ul class="nav navbar-nav left">
            <li> <a href="#" class="nav1">TechSnap</a></li>
@@ -247,7 +247,7 @@ font-size: 15px;
             <li><a href="#" class="nav1">Contact</a></li>
           </ul>
         </nav>
-        </div> -->
+        </div>
         <!-- text -->
         <div class="container spacing">
             <h1 style="color: white;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" class="heading">
