--- a/programming.html
+++ b/programming.html
@@ -309,7 +309,9 @@ font-size: 15px;
 @media only screen and (min-device-width:320px) and (max-device-width:768px) 
 {
      /* navbar */
-   
+body {
+background-color: black;
+};
      
 .spacing
 {
