--- a/programming.html
+++ b/programming.html
@@ -320,7 +320,7 @@ font-size: 15px;
 {
      /* navbar */
 body {
-background-color: black;
+background-color: rgb(51, 48, 48);
 };
      
 .spacing
@@ -332,7 +332,9 @@ overflow-x: hidden;
    }
    .navbar
    {
-       width:110%;
+       width:100%;
+       
+    background-color: black;
    }
 .nav1
 {
