--- a/programming.html
+++ b/programming.html
@@ -330,6 +330,10 @@ background-color: black;
      body{
 overflow-x: hidden;
    }
+   .navback
+   {
+       background-color: rgb(54, 53, 53);
+   }
    .navbar
    {
        width:100%;
@@ -440,7 +444,7 @@ font-size: 15px;
 </style>
 <body style=" overflow-x: hidden;max-width:100%;">
     <!-- navbar -->
-    
+    <div class="navback">
     <div class="topnavbar" style="overflow-x: hidden;">
         <nav class="navbar navbar-inverse" style="width: 100%;">
           <ul class="nav navbar-nav left">
@@ -452,6 +456,7 @@ font-size: 15px;
           </ul>
         </nav>
         </div>
+    </div>
         <div class="row ">
             <div class="col-lg-8 col-md-8 col-sm-12 col-12 firstcol">
         <div class="container spacing">
