--- a/programming.html
+++ b/programming.html
@@ -325,7 +325,10 @@ overflow-x: hidden;
 background-color: black;
    }
    
-     
+  .topnavbar
+  {
+    overflow-x:hidden;
+  }
 .spacing
 {
     background-color: black;
