--- a/programming.html
+++ b/programming.html
@@ -454,7 +454,7 @@ font-size: 15px;
         </nav>
         </div>
   
-        <div class="row ">
+        <div class="row " style="width:100%">
             <div class="col-lg-8 col-md-8 col-sm-12 col-12 firstcol">
         <div class="container spacing">
 
