--- a/programming.html
+++ b/programming.html
@@ -466,7 +466,7 @@ font-size: 15px;
             <ul class="update ">
               <li class="updatetime ">Last Updated 25 July 2021</li>
               </ul>
-<img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image">
+<!-- <img src="Group 1.png" class="img-responsive center-block d-block mx-auto image" alt="Sample Image"> -->
               </div>
           </div>
   </div>
