--- a/programming.html
+++ b/programming.html
@@ -473,7 +473,7 @@ font-size: 15px;
 
             <h1 style="color: white;font-family: -apple-system, BlinkMacSystemFont, 
             'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-             sans-serif;" class="heading textcol ">
+             sans-serif;text-align: center" class="heading textcol ">
            A list of programming languages that a beginner should know</h1>
 
             <ul class="update ">
@@ -538,7 +538,7 @@ and of course, where you are now, Techsnap.
 
         <h2 style="color: white;font-family: -apple-system, BlinkMacSystemFont, 
         'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-         sans-serif;">Let’s start with the Languages that may probably Let you up in your Programming Career!</h2>
+         sans-serif;text-align: center;">Let’s start with the Languages that may probably Let you up in your Programming Career!</h2>
 
 </div>
 </div> 
