--- a/programming.html
+++ b/programming.html
@@ -482,7 +482,8 @@ font-size: 15px;
         
                 <h2 style="color: white;font-family: -apple-system, BlinkMacSystemFont, 
                 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-                 sans-serif;text-align: center;">Let’s start with the Languages that may probably Let you up in your Programming Career!</h2>
+                 sans-serif;text-align: center;">A list of programming languages that a beginner should know.
+</h2>
         
         </div>
         </div> 
