--- a/programming.html
+++ b/programming.html
@@ -750,7 +750,7 @@ like Apple, Microsoft's Windows and Internet Explorer too. </div>
         Pebble the smart watch maker has also created Pebble.js framework which supports to create it's own brand smart watches.
 It is used at the front end of developing popular websites like Google, YouTube, Facebook, and Amazon.  
  </div>
-
+</div>
 <div class="row">
     <div class="text textcol col-8">
         Level : intermediate
