--- a/programming.html
+++ b/programming.html
@@ -373,7 +373,9 @@ overflow-x: hidden;
 background-color: black;
    }
    
-     
+     .textcol{
+         color: white;
+     }
 .spacing
 {
     background-color: black;
@@ -443,6 +445,11 @@ font-size: 15px;
     padding:4% 0 4% 0;
     height:130px;
 }
+.text
+  {
+    font-size: 18px;
+    font-weight: 100;
+  }
 .imageruby
 {
     
