--- a/programming.html
+++ b/programming.html
@@ -184,7 +184,7 @@ ul.update
   } 
   .text
   {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 100;
   }.firstcol
 {
@@ -315,8 +315,7 @@ font-size: 15px;
 } 
 .text
   {
-    font-size: 18px;
-    font-weight: 100;
+    font-size: 17px;
   }
   .imageprog
 {
@@ -546,10 +545,10 @@ font-size: 15px;
 
 <div class="row">
     <div class="text textcol col-8">
-        <!-- If you never been to learn programming before, you might be wondering what programming actually is.
+        If you never been to learn programming before, you might be wondering what programming actually is.
         Well, when we write a program, we're giving the computer a series of commands that kinda look like a unnatural form of English.You can 
-        think of a computer as a very obedient pet, listening to your every command, and doing whatever you tell it to. -->
-        Microsoft Visual Studio is an IDE from Microsoft which is used to develop computer programs, websites, web services, and mobile apps. It is the premium IDE coming at an enterprise pricing of $2999 annually. It comes with tons of tools for compatibility testing so you could test on numerous devices and applications.
+        think of a computer as a very obedient pet, listening to your every command, and doing whatever you tell it to.
+        
 </div>
 </div>
 <div class="row">
