--- a/programming.html
+++ b/programming.html
@@ -381,7 +381,7 @@ background-color: black;
    }
    
      .textcol{
-         color: white;
+         color: rgb(235, 232, 232);
      }
 .spacing
 {
@@ -406,8 +406,8 @@ font-size: 15px;
 }
 .text
   {
-    font-size: 14px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 400;
   }
 .image
 {
