--- a/programming.html
+++ b/programming.html
@@ -391,7 +391,11 @@ font-size: 15px;
 @media only screen and (min-device-width:320px) and (max-device-width:768px) 
 {
      /* navbar */
-     
+     .ads
+     {
+         display: none;
+     }
+
    body{
 overflow-x: hidden;
 background-color: black;
