--- a/programming.html
+++ b/programming.html
@@ -51,7 +51,7 @@ ul.update {
 .textcol
 {
     color:rgb(216, 216, 216);
-    text-align: justify;
+    /* text-align: justify; */
 }
 .image
 {  
@@ -98,7 +98,7 @@ ul.update
     font-weight: 100;
   }.firstcol
 {
-     padding:5% 3% 5% 5%;
+     padding:5% 1% 5% 5%;
 }
 .spacing
 {
@@ -206,7 +206,7 @@ ul.update
     font-weight: 100;
   }.firstcol
 {
-     padding:5% 3% 5% 5%;
+     padding:5% 1% 5% 5%;
 }
 .spacing
 {
@@ -297,7 +297,7 @@ ul.update
 }
 .firstcol
 {
-     padding:5% 3% 5% 5%;
+     padding:5% 1% 5% 5%;
 }
 .col-sm-12 .spacing
 {
@@ -403,6 +403,8 @@ background-color: black;
    }
    
      .textcol{
+        text-align:justify;
+        word-spacing: 10px;
          color: rgb(235, 232, 232);
      }
 .spacing
@@ -519,6 +521,10 @@ font-size: 15px;
 .row
 {
     width: 100%;
+}
+.col-12 .contact
+{
+    padding-left: 15%;
 }
 }
 </style>
@@ -1134,39 +1140,14 @@ requirements and needs.
 </div>
 </div>
 <div class="row"></div>
+
+<div class="container">
 <div class="row">
-    <div class="text textcol col-12" style="color: rgb(24, 155, 216);">
-       GOOD LUCK!
+    <div class="text textcol col-12" style="color: rgb(24, 155, 216);padding:2% 0 2% 0">
+       <!-- GOOD LUCK! -->
         </div>
+    </div>
 </div>
-
-<div class="row"></div>
-<div class="row"></div>
-<div class="row">
-    <div class="text textcol col-12" style="color: red;"> Contact us :
-        </div>
-</div>
-
-<div class="row">
-    <div class="text textcol col-12">
-        Twitter<br>
-        Facebook<br>
-        Instagram<br>
-        Github<br>
-        Dribbble<br>
-        Tumblr<br>
-        </div>
-</div>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1197,6 +1178,31 @@ requirements and needs.
     </div>
 </div>
 </div>
+<footer style="background-color: grey;padding:2% 0 2% 0">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-12">
+                <a href="#" style="text-decoration: none;color:white;" class="contact">Twitter</a>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-12">
+                <a href="#" style="text-decoration: none;color:white;" class="contact">Facebook</a>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-12">
+                <a href="#" style="text-decoration: none;color:white;" class="contact">Instagram</a>
+            </div>
+
+            <div class="col-lg-2 col-md-4 col-sm-6 col-12">
+                <a href="#" style="text-decoration: none;color:white;" class="contact">Github</a>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-12">
+                <a href="#" style="text-decoration: none;color:white;" class="contact">Dribble</a>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 col-12">
+                <a href="#" style="text-decoration: none;color:white;" class="contact">Tumblr</a>
+            </div>
+        </div>
+    </div>
+  </footer>
 
         </body>
 </html>
