--- a/programming.html
+++ b/programming.html
@@ -1141,13 +1141,12 @@ requirements and needs.
 </div>
 <div class="row"></div>
 
-<div class="container">
-<div class="row">
-    <div class="text textcol col-12" style="color: rgb(24, 155, 216);padding:2% 0 2% 0">
-       <!-- GOOD LUCK! -->
-        </div>
-    </div>
+    <div class="row" style="padding:2% 0 2% 0">
+        <div class="text textcol col-8" style="color: rgb(24, 155, 216);">
+           GOOD LUCK!
+            </div>
 </div>
+
 
 
 
@@ -1176,7 +1175,7 @@ requirements and needs.
         <!-- </div> -->
     </div>
     </div>
-</div>
+
 </div>
 <footer style="background-color: grey;padding:2% 0 2% 0">
     <div class="container">
