--- a/programming.html
+++ b/programming.html
@@ -1175,7 +1175,7 @@ requirements and needs.
         <!-- </div> -->
     </div>
     </div>
-
+</div>
 </div>
 <footer style="background-color: grey;padding:2% 0 2% 0">
     <div class="container">
