--- a/programming.html
+++ b/programming.html
@@ -404,7 +404,7 @@ background-color: black;
    
      .textcol{
         text-align:justify;
-        word-spacing: 10px;
+        /* word-spacing: 10px; */
          color: rgb(235, 232, 232);
      }
 .spacing
