--- a/programming.html
+++ b/programming.html
@@ -66,7 +66,7 @@ ul.update {
     }
     body{
         
-        background-color: rgb(90, 88, 88);
+        background-color: #292929;
     }
     /* navbar */
     .nav1
@@ -174,7 +174,7 @@ ul.update
     }
     body{
         
-        background-color: rgb(90, 88, 88);
+        background-color: #292929;
     }
     /* navbar */
     .nav1
@@ -203,7 +203,7 @@ ul.update
   .text
   {
     font-size: 20px;
-    font-weight: 100;
+    /* font-weight: 100; */
   }.firstcol
 {
      padding:5% 1% 5% 5%;
@@ -278,7 +278,7 @@ ul.update
 {
  body
  {
-    background-color: rgb(90, 88, 88);
+    background-color: #292929;
  }   
 .spacing
 {
@@ -431,7 +431,7 @@ font-size: 15px;
 .text
   {
     font-size: 16px;
-    font-weight: 400;
+    /* font-weight: 400; */
   }
 .image
 {
@@ -1177,7 +1177,8 @@ requirements and needs.
     </div>
 </div>
 </div>
-<footer style="background-color: grey;padding:2% 0 2% 0">
+<hr style="color: white;">
+<footer style="background-color: #292929;;padding:2% 0 2% 0">
     <div class="container">
         <div class="row">
             <div class="col-lg-2 col-md-4 col-sm-6 col-12">
