--- a/programming.html
+++ b/programming.html
@@ -1188,9 +1188,8 @@ requirements and needs.
                 <img src="ads.png" style="width: 90%;">
             </div>
 
-
-            <div class="text textcol col-lg-12" style="padding-top:5% ;">
-                <h2 style="text-align: center;color:white">What's New</h2>
+            <div class="text textcol col-lg-12" style="padding-top:5% ;font-size: 32px;">
+                <p style="text-align: center;color:white">Whats's New</p>
              </div>
             
     <!-- <p class="col-lg-12 dotted"></p> -->
@@ -1207,9 +1206,24 @@ requirements and needs.
         <img src="ads2.png" alt="">
         <span>Ad free experience with TechSnap Premium</span>
       </div>
+      <div class="row text textcol" style="padding-top:5% ;font-size: 32px;">
+        <p style="text-align:center;color:white">Written Work</p>
+     </div>
+     
+     <div class="row" style="color: white;font-size: 20px;padding: 2%;">
+     Lorem, dolor consectetur adipisicing elit. Repudiandae?
+     </div>
 
+     <div class="row" style="color: white;font-size: 20px;padding: 2%">
+        Lorem, dolor consectetur adipisicing elit. Repudiandae?
+        </div>
+        <div class="row" style="color: white;font-size: 20px;padding: 2%">
+            Lorem, dolor consectetur adipisicing elit. Repudiandae?
+            </div>
 
-
+            <div class="row" style="padding-top: 5%;width: 70%;">
+                <img src="ads3.png">
+            </div>
     </div>
 </div>
 </div>
