--- a/programming.html
+++ b/programming.html
@@ -56,10 +56,7 @@
 background-color: black;
 height:100px;
 }
-.nav1
-{
-    color: white;
-   }
+
 /* pic and text */
 
 ul.update {
@@ -93,11 +90,7 @@ ul.update {
         background-color: #292929;
     }
     /* navbar */
-    .nav1
-    {
-        font-size: 160%;
-
-    } 
+    
     /* pic and text */
 .heading
 {
@@ -201,11 +194,7 @@ ul.update
         background-color: #292929;
     }
     /* navbar */
-    .nav1
-    {
-        font-size: 160%;
-
-    } 
+    
     /* pic and text */
 .heading
 {
@@ -334,10 +323,8 @@ ul.update
 .col-sm-12 .firstcol{
     padding-right: 25%;
 }
-.nav1
-{
-    font-size: 150%;
-} 
+
+
 /* pic and text */
 .heading
 {
@@ -439,10 +426,7 @@ background-color: black;
    {
        width:100%;
    }
-.nav1
-{
-    font-size: 150%;
-} 
+ 
 /* pic and text */
 .heading
 {
@@ -556,7 +540,7 @@ font-size: 15px;
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-md">
-          <a class="navbar-brand" href="#">TECH SNAP</a>
+          <a class="navbar-brand" href="#" style="font-size: 25px;">TechSnap</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -569,9 +553,10 @@ font-size: 15px;
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link me-2 active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Contact</a>
+            <div class="navbar-nav ms-auto" >
+              <a class="nav-link me-2 active" aria-current="page" href="#" style="font-size: 22px;">Home</a>
+              <a class="nav-link active" href="#" style="font-size: 22px;">Programming</a>
+              <a class="nav-link active" href="#" style="font-size: 22px;">IDE</a>
             </div>
           </div>
         </div>
