--- a/programming.html
+++ b/programming.html
@@ -555,7 +555,7 @@ font-size: 15px;
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto" >
               <a class="nav-link me-2 active" aria-current="page" href="#" style="font-size: 22px;">Home</a>
-              <a class="nav-link active" href="#" style="font-size: 22px;">Programming</a>
+              <a class="nav-link active" href="#" style="font-size: 22px;">PC Requirements</a>
               <a class="nav-link active" href="#" style="font-size: 22px;">IDE</a>
             </div>
           </div>
