--- a/design.html
+++ b/design.html
@@ -125,7 +125,7 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-12 container box">
               <img src="step4_s1.png" alt="Avatar" class="finalimg">
-              <p class="sub">Quality Assurance</p>
+              <p class="sub qua">Quality Assurance</p>
               <div class="overlay">
                 <div class="text">
                   <p>Define Test Strategy</p>
