--- a/design.html
+++ b/design.html
@@ -50,11 +50,11 @@
             <div class="page">
                 <!-- head -->
             <div class="head">
-                <div class="container  col-lg-10 mx-auto" style="padding-top: 20%;padding-bottom: 5%;">
+                <div class="container  col-lg-10 mx-auto" style="padding-top: 17%;padding-bottom: 5%;">
                   <div class="row">
                     <h1 class="headtext col-lg-6">The best products<br> Don't focus on features They focus on design</h1>
                   </div>
-                  <div class="row" style="padding: 3% 0 3% 0;">
+                  <div class="row" style="padding: 5% 0 3% 0;">
                     <h4 class="headsubtext col-lg-7">Design is not just what it looks like and feels like <br>Design is how it works</h4>
                   </div>
                  <div class="row " style="width: fit-content;padding-left: 1%;">
@@ -173,11 +173,11 @@
             </div>
             </div>
             <!-- uiux design -->
-            <div class="col-lg-10 col-md-10 col-sm-10 col-10 mx-auto">
+            <div class="col-lg-10 col-md-10 col-sm-10 col-10 mx-auto" style="padding-top: 8%;padding-bottom:8% ;">
               <div class="row  uidesign">
                 <h2 class="uitext">Our UI/UX Design Services</h2>
               </div>
-              <div class="row" style="text-align: center;">
+              <div class="row" style="text-align: center;padding-top: 5%;">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-12">
             <img src="Ethereum-Contract-Compatibility.svg" class="uiimages">
             <h4 class="imgsubtext">High-fidelity Prototype</h4>
@@ -215,32 +215,32 @@
               </div>
             </div>
             <!-- technology -->
-            <div class="technology" style="background-color: rgb(82, 82, 82);padding-bottom: 5%;">
-            <div class="col-lg-12 col-md-10 col-sm-10 col-10 mx-auto">
+            <div class="technology" style="background-color: rgb(82, 82, 82);">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-11 mx-auto">
               <div class="row  uidesign" >
                 <h2 class="uitext">Technology Expertise</h2>
               </div>
-              <div class="row" style="padding-top: 5%;text-align: center;">
+              <div class="row" style="text-align: center;">
                 <div class="col-lg-1"></div>
-                <div class="col-lg-2">
-                  <img src="ps.png">
-                  <img src="fig.png">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-2">
+                  <img src="ps.png" class="icons">
+                  <img src="fig.png" class="icons">
                 </div>
-                <div class="col-lg-2">
-                  <img src="xd.png">
-                  <img src="icn_invision.png">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-2">
+                  <img src="xd.png" class="icons">
+                  <img src="icn_invision.png" class="icons">
                 </div>
-                <div class="col-lg-2">
-                  <img src="ai.png">
-                  <img src="icn_sketch.png" >
+                <div class="col-lg-2 col-md-2 col-sm-2 col-2">
+                  <img src="ai.png" class="icons">
+                  <img src="icn_sketch.png"  class="icons">
                 </div>
-                <div class="col-lg-2">
-                  <img src="ae.png">
-                  <img src="icn_HTML.png">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-2">
+                  <img src="ae.png" class="icons">
+                  <img src="icn_HTML.png" class="icons">
                 </div>
-                <div class="col-lg-2">
-                  <img src="pr.png">
-                  <img src="icn_CSS.png">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-2">
+                  <img src="pr.png" class="icons">
+                  <img src="icn_CSS.png" class="icons">
                 </div>
               </div>
             </div>
@@ -284,7 +284,7 @@
                 <div class="row" >
                   <div class="col-lg-12 col-md-12 col-sm-12 col-12" style="text-align: left;">
                   <label style="text-align: left;">Purpose</label><br>
-                 <input type="text" placeholder="What are you looking for?" >
+                 <input type="text" style="text-align: left;" class="purpose" placeholder="What are you looking for?" >
                 </div>
                 </div>
                 <div class="row col-lg-3 col-md-3 col-sm-6 col-6 mx-auto" style="padding-top: 5%;padding-bottom: 5%;text-align: left;">
@@ -343,10 +343,10 @@
 </footer>
 <div class="Privacy_holder">
 	<div class="Privacy_links">
-		<a href="##">Privacy policy</a>
-		<a href="##">Cookies Notice</a>
-		<a href="##">Security</a>
-		<a href="##">Terms of use</a>
+		<a href="#" class="link">Privacy policy</a>
+		<a href="#" class="link">Cookies Notice</a>
+		<a href="#" class="link">Security</a>
+		<a href="#" class="link">Terms of use</a>
 	</div>
 	<div class="Social-media">
 		<img src="twitter.svg"/>
