--- a/design.html
+++ b/design.html
@@ -149,7 +149,7 @@
             <!-- getstarted -->
             <div class="sectionthree">
             <div class="row getstarted">
-            <h2 class="getstartedtext" >Get started today</h2>
+            <h2 class="getstartedtext" style="padding-top: 8%;padding-bottom: 2%;" >Get started today</h2>
             </div>
             <div class="row col-lg-12 col-md-10 col-sm-10 col-10 mx-auto" style="padding-top: 5%;padding-left:5%;text-align: left;">
               <div class="col-lg-3 col-md-6 col-sm-6 col-12">
