--- a/design.html
+++ b/design.html
@@ -232,7 +232,7 @@
               <div class="row  uidesign" >
                 <h1 class="uitext">Technology Expertise</h1>
               </div>
-              <div class="row" style="text-align: center;">
+              <div class="row" style="text-align: center;padding-bottom:3%">
                 <div class="col-lg-1"></div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                   <img src="ps.png" class="icons">
